[tool.poetry]
name = "lunohod-app"
version = "0.1.0"
description = ""
authors = ["LEv145"]
packages = [{include = "lunohod_app", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
inputs = "^0.5"
pyside6 = "^6.4.1"

[tool.poetry.scripts]
lunohod_app = "lunohod_app.__main__:main"


[tool.poetry.group.dev.dependencies]
ipython = "^8.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
